syntax = "proto3";

// 命 令 号: 1007
// 命令名称: led_belt_expressions_continuous_breath_set
// 命令描述: 灯带连续灯珠呼吸设置
// 文件名称: d1ac1007_led_belt_expressions_continuous_breath_set.proto

// 以下是 Android 生成对应 Java 所需信息
option java_package = "com.ubtedu.deviceconnect.libs.ukit.smart.protobuffer";
option java_outer_classname = "PbLedBeltExpressionsContinuousBreathSet";

message LedBeltExpressionsContinuousBreathSetRequest {
  // ATTR: REQUSET
  message info {
    uint32 start_pixel = 1;
    uint32 end_pixel = 2;
    uint32 rgbc = 3;
    uint32 time = 4;
    uint32 port = 5;
  }
  repeated info pixel=1;
}

message LedBeltExpressionsContinuousBreathSetResponse {

}
